# SubArchivist_parser

./: .gitignore  .grab.txt.kate-swp  LICENSE  Main.py  Main_V3.py  Main_V4.py  Main_V5.py  Main_v2.py  Main_v3.py  Main_v4.py  Main_v5.py  README.md  aggregate_links.py  crunchy-cli-v3.6.6-linux-x86_64:Zone.Identifier  crunchy.py  custom_header.txt  filters.py  grab.txt  grab_links.py  grab_links_v2.py  grab_template.txt  how-to-download-subs-only.txt  json_test.py  links - Copy (2).json  links - Copy (3).json  links - Copy (4).json  links - Copy (5).json  links - Copy (6).json  links - Copy - Copy - Copy.json  links - Copy.json  links-1.json  links.json  links.txt  links2.json  links_template.json  list.py  requirements.txt  sample_code.txt  secrets.py  secrets_dev.py  (+13 more)
.stversions/: Main_v3.sync-conflict-20231120-003424-5RRNAMS~20231121-200415.py  Main_v3~20231111-150758.py  Main_v3~20231113-215330.py  Main_v3~20231115-111855.py  Main_v3~20231117-171618.py  Main_v3~20231118-193256.py  Main_v3~20231120-212300.py  Main_v3~20231121-200414.py  Main_v3~20231122-182842.py  Main_v3~20231124-000552.py  Main_v3~20231124-194551.py  Main_v3~20231126-231900.py  Main_v3~20231128-192240.py  Main_v3~20231129-002742.py  Main_v3~20231129-192646.py  Main_v3~20231130-215303.py  Main_v3~20231203-110325.py  Main_v3~20231205-204327.py  Main_v3~20231208-010138.py  Main_v3~20231210-094519.py  Main_v3~20231211-100533.py  Main_v3~20231218-002317.py  Main_v3~20231218-163658.py  Main_v3~20231219-220312.py  (+62 more)
dumps/: dump.txt  (+3 more)
grab_links/: Cargo.toml
grab_links/src/: main.rs  pass.txt  user.txt
(+37 files in other folders)
