[package]
name = "grab_links"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crunchyroll-rs = "0.12"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
quinn-proto = "0.11.7"
idna = "1.0.0"
rustls = "0.23.18"